Add hobbies field to sign up form

--- a/src/containers/AuthenticationPage/SignupForm/SignupForm.module.css
+++ b/src/containers/AuthenticationPage/SignupForm/SignupForm.module.css
@@ -28,6 +28,10 @@
   width: calc(66% - 9px);
 }
 
+.hobbies {
+  composes: marketplaceHobbiesMargins from global;
+}
+
 .password {
   composes: marketplaceModalPasswordMargins from global;
 }
