--- a/src/styles/marketplaceDefaults.css
+++ b/src/styles/marketplaceDefaults.css
@@ -556,7 +556,7 @@ textarea {
 /* ================ Plain global CSS glasses ================ */
 
 /**
- * Note: even though these reflect element styles, 
+ * Note: even though these reflect element styles,
  * these are below element styles to allow overwrites using classes.
  */
 
@@ -925,7 +925,7 @@ textarea {
  * For actual buttons, use components: <Button>, <PrimaryButton>, <SecondaryButton>
  *
  * To create button look-and-feel for links, etc. combine button classes in CSS Modules:
- * 
+ *
  * <Button>:
  *   composes: buttonDefault from global;
  * <PrimaryButton>:
@@ -1465,7 +1465,7 @@ textarea {
   }
 }
 
-.marketplaceModalPasswordMargins {
+.marketplaceModalPasswordMargins, .marketplaceHobbiesMargins {
   /* Leave space between the input and the button below when the
   viewport height is small */
   margin-top: 24px;
