--- a/src/containers/ProfilePage/ProfilePage.module.css
+++ b/src/containers/ProfilePage/ProfilePage.module.css
@@ -41,13 +41,23 @@
   }
 }
 
-.mobileHeading {
+.mobileHeadingContainer {
   flex-shrink: 0;
-  margin: 60px 0 0 0;
+  margin: 51px 0 0 0;
 
   @media (--viewportMedium) {
-    margin: 49px 0 0 0;
+    margin: 26px 0 0 0;
   }
+
+  @media (--viewportLarge) {
+    display: none;
+  }
+}
+
+.mobileHeading {
+  flex-shrink: 0;
+  margin: 0;
+
   @media (--viewportLarge) {
     display: none;
   }
@@ -76,13 +86,17 @@
   }
 }
 
-.desktopHeading {
+.desktopHeadingContainer {
   display: none;
 
   @media (--viewportLarge) {
     display: block;
     margin: 0 0 24px 0;
   }
+}
+
+.desktopHeading {
+  margin-bottom: 0;
 }
 
 .bio {
